Crash when press ctrl during extruding. #118445

Closed
opened 2024-02-19 01:21:02 +01:00 by Paul · 2 comments

System Information
Operating system: Linux-6.1.0-13-amd64-x86_64-with-glibc2.36 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05

Blender Version
Broken: version: 4.1, 4.2.0 Alpha, branch: main, commit date: 2024-02-17 20:44, hash: c2b56ca4688e
Worked: 4.0

Short description of error
[When snapping uses face nearest and I press ctrl during extruding, then blender crashes.]

Exact steps for others to reproduce the error
[Set snap settings as on provided screen shoot(face nearest), extrude face of any mesh and during extruding press ctrl.]
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Linux-6.1.0-13-amd64-x86_64-with-glibc2.36 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05 **Blender Version** Broken: version: 4.1, 4.2.0 Alpha, branch: main, commit date: 2024-02-17 20:44, hash: `c2b56ca4688e` Worked: 4.0 **Short description of error** [When snapping uses face nearest and I press ctrl during extruding, then blender crashes.] **Exact steps for others to reproduce the error** [Set snap settings as on provided screen shoot(face nearest), extrude face of any mesh and during extruding press ctrl.] [Based on the default startup or an attached .blend file (as simple as possible)]
Paul added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2024-02-19 01:21:02 +01:00
Member

Thanks for the report. Can confirm the crash.

Thanks for the report. Can confirm the crash.
Pratik Borhade added
Module
Modeling
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2024-02-19 05:04:28 +01:00
Member

Appears to be caused by from logs: dd1c12e4d0
ED_view3d_win_to_ray_clipped_ex is now executed and mval is nullptr for in applyFaceNearest
@mano-wii ^

Appears to be caused by from logs: dd1c12e4d0ee75ad5360bf7ba59db92b82e28b51 `ED_view3d_win_to_ray_clipped_ex` is now executed and `mval` is nullptr for in `applyFaceNearest` @mano-wii ^
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-19 16:17:24 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#118445
No description provided.