Fix #118445: crash when snapping to face nearest

Caused by `dd1c12e4d0`.

We need to be a little more restricted to calculate the occlusion plane.